Bug 376085 - quick brush engine has a hard-coded max size of 1000px
Summary: quick brush engine has a hard-coded max size of 1000px
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-06 04:34 UTC by Raghavendra kamath
Modified: 2018-09-15 09:24 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The quick brush with a size greater than 1K (125.92 KB, image/png)
2018-09-13 20:35 UTC, Jaime Torres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2017-02-06 04:34:05 UTC
A latest feature in the development version has increased the brush size limit to 10k

this is the commit for reference -> https://cgit.kde.org/krita.git/commit/?id=85ec5a10916f4b5eefe36c14272957154b49e4fb

however the shift drag resize of the brush limits itself to the old 1k limit
the user can drag the slider in the tool bar and change the size manually

User should also be able to change the brush size via shift + drag to the given limit (limit he has put in the settings).
Comment 1 wolthera 2017-02-06 14:21:30 UTC
quickbrush seems to be snapping back as well in particular.
Comment 2 Halla Rempt 2017-02-07 11:19:41 UTC
Git commit 27a1887ba3cca0cf472fec278ebbe1e653f0151c by Boudewijn Rempt.
Committed on 07/02/2017 at 11:19.
Pushed by rempt into branch 'master'.

M  +1    -1    libs/ui/tool/kis_tool_paint.cc

https://commits.kde.org/krita/27a1887ba3cca0cf472fec278ebbe1e653f0151c
Comment 3 Raghavendra kamath 2017-02-08 15:01:06 UTC
@boud This is still reproducible in git master. I did a clean build but the brush still snaps to 1k
Comment 4 Halla Rempt 2017-02-08 15:54:54 UTC
Let's reopen it then. I won't be able to do any coding for some time, but if it stays closed, I will forget for sure.
Comment 5 Halla Rempt 2017-03-27 14:19:46 UTC
Hm, I really cannot reproduce this in git master anymore.
Comment 6 Raghavendra kamath 2017-04-17 10:29:48 UTC
Hi Boud,

this is only true with the quick brush - brush engine now.

The quick brush engine brushes get stuck 1k in master. rest all brush engine ( atleast the ones that I tested work fine without problem.)

Sidenote- there is a small hiccup lag notably beyond 1k when resizing brushes with auto brush tips.
Comment 7 Halla Rempt 2017-04-25 12:45:37 UTC
Yeah, the hickup is normal: it's because at that point the masks are generated for the larger sizes. Those masks are going to take a serious amount of memory, by the way.

But weird that the bug happens with specifically the quick brush engine. I guess that one doesn't implement brush resizing correctly.
Comment 8 wolthera 2017-04-25 17:50:52 UTC
It isn't weird that said bug specifically happens with the quick brush engine: Dmitry had at one point set a hardcap to 1000 for the quickbrush engine because Animtim was able to get it beyond 1000 at the sprint.
Comment 9 Jaime Torres 2018-09-13 19:18:18 UTC
I see that the quick brush size and the brush size in the toolbar are both limited to 1000px in git version of today (or at least I have not found a brush which allows a bigger size).
Is this bug still valid?
Comment 10 Halla Rempt 2018-09-13 19:22:14 UTC
Yes, it is. Basically, most brush engines follow the max brush diameter setting in the settings dialog, but the quick brush engine doesn't.
Comment 11 Jaime Torres 2018-09-13 20:35:57 UTC
Created attachment 114941 [details]
The quick brush with a size greater than 1K

If the attached image is the quick brush, the size follows the global limit, in this case of 5000px. (git version of today)
Comment 12 Dmitry Kazakov 2018-09-14 14:02:17 UTC
Git commit 7e90373dc7e63210a65002fa029b2813a579a369 by Dmitry Kazakov.
Committed on 14/09/2018 at 14:02.
Pushed by dkazakov into branch 'master'.

Remove hardcoded brush size limit for the Quick Brush

M  +8    -1    plugins/paintops/roundmarker/kis_roundmarker_option.cpp
M  +1    -1    plugins/paintops/roundmarker/kis_roundmarkerop_settings.cpp

https://commits.kde.org/krita/7e90373dc7e63210a65002fa029b2813a579a369
Comment 13 Halla Rempt 2018-09-15 09:24:40 UTC
Git commit 388d73946129a4b769b74df6d126ddfe03b681d4 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 15/09/2018 at 09:08.
Pushed by rempt into branch 'krita/4.1'.

Remove hardcoded brush size limit for the Quick Brush

M  +8    -1    plugins/paintops/roundmarker/kis_roundmarker_option.cpp
M  +1    -1    plugins/paintops/roundmarker/kis_roundmarkerop_settings.cpp

https://commits.kde.org/krita/388d73946129a4b769b74df6d126ddfe03b681d4