Remove hardcoded brush size limit for the Quick Brush

BUG:376085